--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@clerk/clerk-react": "^5.42.2",
         "@tailwindcss/vite": "^4.1.11",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
+        "react-router-dom": "^7.8.1",
         "tailwindcss": "^4.1.11"
     },
     "devDependencies": {
